--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/public/dibitech.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meu Primeiro Projeto React com Git</title>
   </head>
